[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="fasthtml"
dynamic = ["version"]
description = "The fastest way to create an HTML app"
readme = "README.md"
requires-python=">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard and contributors", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AnswerDotAI/fasthtml"
Documentation = "https://www.fastht.ml/docs/"

[project.entry-points.nbdev]
fasthtml = "fasthtml._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fasthtml.__version__"}

[tool.setuptools.packages.find]
include = ["fasthtml"]

[tool.nbdev]
jupyter_hooks = true
custom_sidebar = false
